# StarWarsApiChallenge

./: .env.example  .gitignore  README.md  main.py  openapi-spec.yaml  pyproject.toml  requirements.txt  starwars_controller.py  starwars_service.py  swapi_client.py
.github/workflows/: deploy.yml
model/: films.py  person.py  planet.py  specie.py  starship.py  vehicle.py
tests/: test_starwars_controller.py  test_starwars_service.py  test_swapi_client.py
